--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Eric May</strong>, a developer with experience in many fields.</h1>
 				</div>
 			</header>
@@ -58,7 +57,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Testing and Continuous Integration</h3>
-								<p>While teaching, I have utilized automated testing and processes to give students clear feedback based on their work.</p>
+								<p>I have utilized automated testing and processes to prevent regression errors and give students clear feedback based on their work.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
@@ -79,7 +78,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>For any questions or opportunities to work together, or to request my full resume, please use the most convenient method to reach out. I'd love to hear from you! Contracting and employment requests welcome.</p>
+						<p>If you have questions or an opportunity to work together, or to request my full resume, please use the most convenient method to reach out. I'd love to hear from you! Contracting and employment requests welcome.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
